Changes to Maven dependencies and Java version
Changes to Maven dependencies and Java version

--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,15 @@
     	<artifactId>soliloquy.specs</artifactId>
     	<version>0.0.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.openjfx</groupId>
+    	<artifactId>javafx-media</artifactId>
+    	<version>11.0.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.openjfx</groupId>
+    	<artifactId>javafx-swing</artifactId>
+    	<version>11.0.2</version>
+    </dependency>
   </dependencies>
 </project>
