Implemented integration tests
Implemented integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.class
 *.prefs
 target/classes/inaugural/soliloquy/audio/test/Kevin_MacLeod_-_Living_Voyage.mp3
+target/classes/inaugural/soliloquy/audio/test/unit/Kevin_MacLeod_-_Living_Voyage.mp3
