--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1</version>
   <name>Inaugural Engine Audio Component</name>
   <description>Classes implementing audio functionality</description>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -41,6 +42,7 @@
       </plugin>
     </plugins>
   </build>
+  
   <distributionManagement>
       <repository>
           <id>inaugural.soliloquy.audio</id>
@@ -56,6 +58,7 @@
       </snapshotRepository>
       <downloadUrl>https://github.com/felix-t-morgenstern/inaugural.soliloquy.audio</downloadUrl>
   </distributionManagement>
+  
   <repositories>
     <repository>
         <id>github-mvn-repo</id>
@@ -68,6 +71,11 @@
         </snapshots>
     </repository>
   </repositories>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
   	<dependency>
   		<groupId>org.mockito</groupId>
