--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
 		<artifactId>junit-jupiter-engine</artifactId>
 		<version>5.1.0</version>
 	</dependency>
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-swing</artifactId>
+          <version>11.0.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-media</artifactId>
+          <version>11.0.2</version>
+      </dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
