--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
     	<artifactId>inaugural.soliloquy.common</artifactId>
     	<version>0.0.1</version>
     </dependency>
+    <dependency>
+        <groupId>disorg.soliloquy</groupId>
+        <artifactId>inaugural.soliloquy.tools</artifactId>
+        <version>0.0.1</version>
+    </dependency>
 	<dependency>
 		<groupId>org.junit.jupiter</groupId>
 		<artifactId>junit-jupiter-engine</artifactId>
