--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 
 *.class
 *.prefs
-target/classes/inaugural/soliloquy/audio/test/Kevin_MacLeod_-_Living_Voyage.mp3
-target/classes/inaugural/soliloquy/audio/test/unit/Kevin_MacLeod_-_Living_Voyage.mp3
+target
 *.jar
 *.lst
 *.md5
 *.sha1
 *.pom
-target/maven-archiver/pom.properties
-target/mvn-repo/disorg/soliloquy/inaugural.soliloquy.audio/maven-metadata.xml
 .idea
-target/classes/Kevin_MacLeod_-_Living_Voyage.mp3
