--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
           </execution>
         </executions>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
   
@@ -127,6 +135,12 @@
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-media</artifactId>
           <version>11.0.2</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.5</version>
       </dependency>
   </dependencies>
   <dependencyManagement>
