Changes to POM to allow checking into Github Packages
Changes to POM to allow checking into Github Packages

--- a/pom.xml
+++ b/pom.xml
@@ -53,13 +53,13 @@
   
   <distributionManagement>
       <repository>
-          <id>inaugural.soliloquy.audio</id>
+          <id>github</id>
           <name>Soliloquy, Inaugural Engine, Audio Module</name>
           <uniqueVersion>false</uniqueVersion>
-          <url>file://${project.build.directory}/mvn-repo</url>
+          <url>https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.audio</url>
       </repository>
       <snapshotRepository>
-          <id>inaugural.soliloquy.audio</id>
+          <id>github</id>
           <name>Soliloquy, Inaugural Engine, Audio Module</name>
           <uniqueVersion>false</uniqueVersion>
           <url>file://${project.build.directory}/mvn-repo</url>
