--- a/pom.xml
+++ b/pom.xml
@@ -1,161 +1,160 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>disorg.soliloquy</groupId>
-  <artifactId>inaugural.soliloquy.audio</artifactId>
-  <version>0.0.1</version>
-  <name>Inaugural Engine Audio Component</name>
-  <description>Classes implementing audio functionality</description>
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <release>9</release>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <useProjectReferences>false</useProjectReferences>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.github.github</groupId>
-        <artifactId>site-maven-plugin</artifactId>
-        <version>0.12</version>
-        <configuration>
-          <message>Creating site for ${project.version}</message>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>site</goal>
-            </goals>
-            <phase>site</phase>
-          </execution>
-        </executions>
-      </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>11</source>
-                <target>11</target>
-            </configuration>
-        </plugin>
-    </plugins>
-  </build>
-  
-  <distributionManagement>
-      <repository>
-          <id>github</id>
-          <name>Soliloquy, Inaugural Engine, Audio Module</name>
-          <uniqueVersion>false</uniqueVersion>
-          <url>https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.audio</url>
-      </repository>
-      <snapshotRepository>
-          <id>github</id>
-          <name>Soliloquy, Inaugural Engine, Audio Module</name>
-          <uniqueVersion>false</uniqueVersion>
-          <url>file://${project.build.directory}/mvn-repo</url>
-      </snapshotRepository>
-      <downloadUrl>https://github.com/felix-t-morgenstern/inaugural.soliloquy.audio</downloadUrl>
-  </distributionManagement>
-  
-  <repositories>
-    <repository>
-        <id>github-mvn-repo</id>
-        <url>https://raw.githubusercontent.com/felix-t-morgenstern/soliloquy.artifacts/master/</url>
-        <releases>
-            <enabled>true</enabled>
-        </releases>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-    </repository>
-  </repositories>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>disorg.soliloquy</groupId>
+    <artifactId>inaugural.soliloquy.audio</artifactId>
+    <version>0.0.1</version>
+    <name>Inaugural Engine Audio Component</name>
+    <description>Classes implementing audio functionality</description>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>org.mockito</groupId>
-  		<artifactId>mockito-core</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.inject</groupId>
-  		<artifactId>guice</artifactId>
-  		<version>4.0</version>
-  	</dependency>
-    <!--  Gson: Java to Json conversion -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.hamcrest</groupId>
-    	<artifactId>hamcrest-all</artifactId>
-    	<version>1.3</version>
-    </dependency>
-      <dependency>
-          <groupId>disorg.soliloquy</groupId>
-          <artifactId>soliloquy.specs</artifactId>
-          <version>0.0.354</version>
-      </dependency>
-      <dependency>
-          <groupId>disorg.soliloquy</groupId>
-          <artifactId>inaugural.soliloquy.tools</artifactId>
-          <version>0.0.88</version>
-      </dependency>
-      <dependency>
-          <groupId>disorg.soliloquy</groupId>
-          <artifactId>inaugural.soliloquy.common</artifactId>
-          <version>0.0.16</version>
-      </dependency>
-	<dependency>
-		<groupId>org.junit.jupiter</groupId>
-		<artifactId>junit-jupiter-engine</artifactId>
-		<version>5.9.0</version>
-	</dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-swing</artifactId>
-          <version>18.0.2</version>
-      </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-media</artifactId>
-          <version>18.0.2</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-      <dependency>
-          <groupId>commons-io</groupId>
-          <artifactId>commons-io</artifactId>
-          <version>2.11.0</version>
-      </dependency>
-  </dependencies>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>junit</groupId>
-  			<artifactId>junit</artifactId>
-  			<version>5.0.0</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.mockito</groupId>
-  			<artifactId>mockito-core</artifactId>
-  			<version>2.19.0</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
-  <inceptionYear>2019</inceptionYear>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <useProjectReferences>false</useProjectReferences>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.4.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <message>Creating site for ${project.version}</message>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>site</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Soliloquy, Inaugural Engine, Audio Module</name>
+            <uniqueVersion>false</uniqueVersion>
+            <url>https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.audio</url>
+        </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <name>Soliloquy, Inaugural Engine, Audio Module</name>
+            <uniqueVersion>false</uniqueVersion>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </snapshotRepository>
+        <downloadUrl>https://github.com/felix-t-morgenstern/inaugural.soliloquy.audio</downloadUrl>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>github-mvn-repo</id>
+            <url>https://raw.githubusercontent.com/felix-t-morgenstern/soliloquy.artifacts/master/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>disorg.soliloquy</groupId>
+            <artifactId>soliloquy.specs</artifactId>
+            <version>0.0.354</version>
+        </dependency>
+        <dependency>
+            <groupId>disorg.soliloquy</groupId>
+            <artifactId>inaugural.soliloquy.tools</artifactId>
+            <version>0.0.88</version>
+        </dependency>
+        <dependency>
+            <groupId>disorg.soliloquy</groupId>
+            <artifactId>inaugural.soliloquy.common</artifactId>
+            <version>0.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>19</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>5.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>2.19.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <inceptionYear>2019</inceptionYear>
 </project>
